force-app/main/default/objects/refedge__Community_Invite_Contact__c/fields/refedge__Response__c.field-meta.xml
<CustomField>
    <fullName>refedge__Response__c</fullName>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>